--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -35,7 +35,8 @@
             "city": "City",
             "phoneNumber": "Phone number",
             "messega": "Mesagge",
-            "sendMessage": "Send me a message"
+            "sendMessage": "Send me a message",
+            "meLocation": "Me location"
         }
     }
 }
