--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -38,19 +38,50 @@
         "cvc-overview": {
             "personalData": "Persönliche Daten",
             "firstnamaLastname": "Vorname Nachname:",
-            "address": "Schottengasse 2, 90402 Nürnberg",
-            "tel": "+4917642794462",
-            "email": "peter.lakatos@outlook.de",
-            "nationality": "Slowakisch",
-            "birthDate": "06.08.1986",
-            "gender": "Männlich",
-            "DesiredPosition": "Frontend Entwickler",
-            "Experience": "Berufserfahrung",
-            "period": "Zeitraum",
-            "position": "Position",
-            "areasOfResponsibility": "Aufgabenbereiche",
-            "employerAddress": "Arbeitgeber / Adresse",
-            "TypeOfBusiness": "Art des Unternehmens"
+            "address": "Adress:",
+            "tel": "Tel:",
+            "email": "E-Mail",
+            "nationality": "Statsangehörigkeit",
+            "nationality1": "Slowakisch",
+            "birthDate": "Geburtsdatum",
+            "gender": "Geschlecht: ",
+            "gender1": "Mausculine ",
+            "desiredPosition": "Gewünschte Position: ",
+            "desiredPosition1": "Frontend Entwickler",
+            "experience": "Berufserfahrung",
+            "period": "Zeitraum: ",
+            "position": "Position: ",
+            "position1": "Frontend Entwickler",
+            "position2": "Monteur / Techniker",
+            "position3": "Objektleiter",
+            "position4": "Zigarettenautomat  auf Fühler",
+            "position5": "Einsatzleiter",
+            "position6": "Servicekraft, Rotation System, sowie als Kasierer",
+            "areasOfResponsibility": "Aufgabenbereiche: ",
+            "areasOfResponsibility1": "Frontend Entwicklung: Dynamischer Webseiten, Anwendungen sowie PWA, und Responsive Design ",
+            "areasOfResponsibility2": "Montieren von Sitz Liften sowie Reparatur und Wartung",
+            "areasOfResponsibility3": "Kundenbetreuung, Personalplanung, Material Verteilung, Kontrolle und Qualitätssicherung sowie Personal Einstellung und Einweissung ",
+            "areasOfResponsibility4": "Entnahme der Zahlungsmittel, Befüllung der Automaten",
+            "areasOfResponsibility5": "Personalplanung, Koordination, Flugzeugreinigung",
+            "areasOfResponsibility6": "Zubereitung von Produkten, Reinigung und Neu eingestellte Einweisung, sowie als Kassierer",
+            "employerAddress": "Arbeitgeber / Adresse: ",
+            "TypeOfBusiness": "Art des Unternehmens: ",
+            "TypeOfBusiness1": "Treppen und Platform Lifte Einbau: ",
+            "TypeOfBusiness2": "Facility Management Gebäudereinigung: ",
+            "TypeOfBusiness3": "Tabakwaren Automaten: ",
+            "TypeOfBusiness4": "Flugzeugreinigung: ",
+            "continuingEducation": "Weiterbildung:",
+            "scul": "Schule: ",
+            "scul1": "Haupt Schul Abschluss",
+            "continuingEducation1": "als Frontend Entwickler",
+            "trainingContent": "Weiterbildungsinhalt: ",
+            "educationalInstitute": "Bildungsinstitut: ",
+            "socialSkills": "Sozialekompetenzen: ",
+            "socialSkills1": "Zielstrebig, Teamfähig, Lösungsorientiert, Begeisterungsfähigkeit, Durchsetzungsstärke, Freundlich, Loyal",
+            "linguisticProficiency": "Sprachkenntnisse",
+            "additionally": "Zusätzlich: ",
+            "driverSlicense": "Führerschein B",
+            "myCurrentTechnicalSkills": "Mein Aktualle Technische Skills"
         }
     }
 }
