--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -40,20 +40,51 @@
         },
         "cvc-overview": {
             "personalData": "Personal Data",
-            "firstnamaLastname": "Firstname Lastname:",
-            "address": "Schottengasse 2, 90402 Nürnberg",
-            "tel": "+4917642794462",
-            "email": "peter.lakatos@outlook.de",
-            "nationality": "Slovak",
-            "birthDate": "06.08.1986",
-            "gender": "Masculine",
-            "DesiredPosition": "Frontend Developer",
-            "Experience": "Work experience",
-            "period": "Period",
-            "position": "Position",
-            "areasOfResponsibility": "areas of responsibility",
-            "employerAddress": "Employer / Address",
-            "TypeOfBusiness": "Type of business"
+            "firstnamaLastname": "Firstname Lastname: ",
+            "address": "Adress: ",
+            "tel": "Tel :",
+            "email": "E-Mail: ",
+            "nationality": "Nationality: ",
+            "nationality1": "Slovak",
+            "birthDate": "Birth Date:",
+            "gender": "Gender: ",
+            "gender1": "Mausculine ",
+            "desiredPosition": "Desiredposition: ",
+            "desiredPosition1": "Frontend Developer",
+            "experience": "Work experience",
+            "period": "Period: ",
+            "position": "Position: ",
+            "position1": "Frontend Developer",
+            "position2": "Fitter / technician",
+            "position3": "Object leader",
+            "position4": "Cigarette vending machine on sensor",
+            "position5": "Operations manager",
+            "position6": "Waiter, rotation system, as well as a cashier",
+            "areasOfResponsibility": "Areas of responsibility:",
+            "areasOfResponsibility1": "Frontend Development: Dynamic websites, applications as well as PWA, and responsive design",
+            "areasOfResponsibility2": "Installation of seat lifts as well as repair and maintenance",
+            "areasOfResponsibility3": "customer care, personnel planning, material distribution, control and quality assurance as well as personnel recruitment and training",
+            "areasOfResponsibility4": "Withdrawal of means of payment, filling of machines",
+            "areasOfResponsibility5": "Personnel planning, coordination, aircraft cleaning",
+            "areasOfResponsibility6": "Preparation of products, cleaning and newly hired instruction, as well as cashier",
+            "employerAddress": "Employer / Address: ",
+            "TypeOfBusiness": "Type of business: ",
+            "TypeOfBusiness1": "Installation of stairs and platform lifts: ",
+            "TypeOfBusiness2": "Facility management building cleaning: ",
+            "TypeOfBusiness3": "Tobacco vending machines: ",
+            "TypeOfBusiness4": "Aircraft cleaning: ",
+            "continuingEducation": "Continuing education:",
+            "continuingEducation1": "as Frontend Developer",
+            "scul": "Scul: ",
+            "scul1": "High school diploma",
+            "trainingContent": "Training content: ",
+            "educationalInstitute": "Educational institute: ",
+            "socialSkills": "Social Skills:",
+            "socialSkills1": "Purposeful, team player, solution-oriented, enthusiasm, assertiveness, friendly, loyal",
+            "linguisticProficiency": "linguistic proficiency",
+            "additionally": "Additionally: ",
+            "driverSlicense": "Driver's license B",
+            "myCurrentTechnicalSkills": "My Current Technical Skills"
         }
     }
 }
