send email modal

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -33,7 +33,7 @@
             "address": "Adress:",
             "tel": "Tel:",
             "email": "E-Mail",
-            "nationality": "Statsangehörigkeit",
+            "nationality": "Stattsangehörigkeit",
             "nationality1": "Slowakisch",
             "birthDate": "Geburtsdatum",
             "gender": "Geschlecht: ",
