add project personal-management-order

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -3,7 +3,7 @@
         "firstLink": "Startseite",
         "secondLinkDropdown": {
             "projects": "Projekte",
-            "eCommerceShop": "E-commerce Shop",
+            "personnelAndOrderManagement": "Personal und bestellmanagement",
             "housekeepingCalculator": "Haushaltsbuch Rechner",
             "contact": "Kontakt"
         },
